# fotos

./: .gitignore  CMakeLists.txt  README.md
resources/: fotos.manifest
src/: App.cpp  App.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp  pch.h
